[metadata]
name = servman-DGGFi
version = 0.1.5
author = DGGFi
author_email = dggwebprojects@gmail.com
description = Tasks-as-services manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dggfi/servman
project_urls =
    Bug Tracker = https://github.com/dggfi/servman/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    path
    websockets
    bidict
    pyjwt

[options.packages.find]
where = src